Fix backend CORS and secure share endpoints