@@ -3,6 +3,7 @@ package com.securevideo.config;
 import com.securevideo.security.JwtAuthenticationFilter;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
@@ -12,7 +13,6 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -21,33 +21,89 @@ public class SecurityConfig {
 
     private final JwtAuthenticationFilter jwtAuthenticationFilter;
 
-    public SecurityConfig(JwtAuthenticationFilter jwtAuthenticationFilter) {
+    public SecurityConfig(
+            JwtAuthenticationFilter jwtAuthenticationFilter
+    ) {
         this.jwtAuthenticationFilter = jwtAuthenticationFilter;
     }
 
     @Bean
-    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+    public SecurityFilterChain securityFilterChain(
+            HttpSecurity http
+    ) throws Exception {
 
         http
-                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-                .csrf(csrf -> csrf.disable())
-                .sessionManagement(session ->
-                        session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)
+                // Enable CORS configuration
+                .cors(cors ->
+                        cors.configurationSource(
+                                corsConfigurationSource()
+                        )
                 )
+
+                // Disable CSRF because JWT authentication is stateless
+                .csrf(csrf -> csrf.disable())
+
+                // Do not create HTTP sessions
+                .sessionManagement(session ->
+                        session.sessionCreationPolicy(
+                                SessionCreationPolicy.STATELESS
+                        )
+                )
+
                 .authorizeHttpRequests(auth -> auth
 
-                        // Public APIs
-                        .requestMatchers("/api/auth/**").permitAll()
-                        .requestMatchers("/api/share/**").permitAll()
+                        // Allow browser CORS preflight requests
+                        .requestMatchers(
+                                HttpMethod.OPTIONS,
+                                "/**"
+                        ).permitAll()
 
-                        // Public video APIs
-                        .requestMatchers("/api/videos/stream/**").permitAll()
-                        .requestMatchers("/api/videos/download/**").permitAll()
-                        .requestMatchers("/api/videos/metadata/**").permitAll()
+                        // Login, registration and refresh-token APIs
+                        .requestMatchers(
+                                "/api/auth/**"
+                        ).permitAll()
 
-                        // Everything else requires authentication
+                        /*
+                         * Only share-link metadata is public.
+                         *
+                         * Example:
+                         * GET /api/share/{shareToken}
+                         *
+                         * send-otp, verify-otp and key-exchange
+                         * still require authentication.
+                         */
+                        .requestMatchers(
+                                HttpMethod.GET,
+                                "/api/share/*"
+                        ).permitAll()
+
+                        /*
+                         * Existing public video endpoints.
+                         *
+                         * Keep these public only when the controller
+                         * validates a secure share token or another
+                         * access mechanism.
+                         */
+                        .requestMatchers(
+                                HttpMethod.GET,
+                                "/api/videos/stream/**"
+                        ).permitAll()
+
+                        .requestMatchers(
+                                HttpMethod.GET,
+                                "/api/videos/download/**"
+                        ).permitAll()
+
+                        .requestMatchers(
+                                HttpMethod.GET,
+                                "/api/videos/metadata/**"
+                        ).permitAll()
+
+                        // Upload and every other API require JWT
                         .anyRequest().authenticated()
                 )
+
+                // Validate JWT before Spring username/password filter
                 .addFilterBefore(
                         jwtAuthenticationFilter,
                         UsernamePasswordAuthenticationFilter.class
@@ -59,7 +115,8 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
 
-        CorsConfiguration configuration = new CorsConfiguration();
+        CorsConfiguration configuration =
+                new CorsConfiguration();
 
         configuration.setAllowedOrigins(List.of(
                 "http://localhost:5173",
@@ -69,7 +126,7 @@ public class SecurityConfig {
                 "https://secure-vedio-project.vercel.app"
         ));
 
-        configuration.setAllowedMethods(Arrays.asList(
+        configuration.setAllowedMethods(List.of(
                 "GET",
                 "POST",
                 "PUT",
@@ -78,26 +135,29 @@ public class SecurityConfig {
                 "OPTIONS"
         ));
 
-        configuration.setAllowedHeaders(Arrays.asList(
-                "Authorization",
-                "Content-Type",
-                "X-Requested-With",
-                "Accept",
-                "Origin"
-        ));
+        // Allow Authorization and multipart upload headers
+        configuration.setAllowedHeaders(List.of("*"));
 
-        configuration.setExposedHeaders(Arrays.asList(
+        configuration.setExposedHeaders(List.of(
                 "Authorization",
-                "Content-Disposition"
+                "Content-Disposition",
+                "Content-Length",
+                "Content-Range",
+                "Accept-Ranges"
         ));
 
         configuration.setAllowCredentials(true);
+
+        // Cache preflight response for one hour
         configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source =
                 new UrlBasedCorsConfigurationSource();
 
-        source.registerCorsConfiguration("/**", configuration);
+        source.registerCorsConfiguration(
+                "/**",
+                configuration
+        );
 
         return source;
     }
